feat:change mvn command change:RUN mvn clean package -> RUN mvn package.because no reason there is.

--- a/springboot/Dockerfile
+++ b/springboot/Dockerfile
@@ -2,7 +2,7 @@ FROM maven AS builder
 WORKDIR /tmp
 COPY ./src ./src
 COPY ./pom.xml .
-RUN mvn clean package
+RUN mvn package
 
 FROM openjdk
 COPY --from=builder /tmp/target/TravelTango-0.0.1-SNAPSHOT.jar /app/app.jar
